fixed image on mobile devices? #2

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ h2 {
 }
 
 #photo {
-	width: 100px;
+	width: 100%;
 }
 
 @media (min-width: 550px) {
